<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, AcceleroScrollDemo!</string>
    <string name="app_name">AcceleroScroll</string>
<string name="background_service_label">AcceleroScroll Service</string>
<string name="background_service_started">AcceleroScroll service started</string>
<string name="background_service_stopped">AcceleroScroll Service stopped</string>
<string name="background_service_connected">Successfully connected to service.</string>
<string name="background_service_disconnected">Disconnected from service.</string>
<string name="service_preferences">Service preferences</string>
<string name="title_acceleration">Acceleration</string>
<string name="title_springness">Surface resistance</string>
<string name="title_maxspeed">Maximum speed</string>
<string name="title_threshold">Angle threshold</string>
<string name="title_data_rate">Data rate</string>
<string name="title_edge_soft">Edge softness</string>
<string name="summary_edge_soft">Edges work like walls. Soft walls throttle speed.</string>
<string name="summary_data_rate">update rate from service (update/s). Higher rates mean more smooth scrolling and more battery usage. (Note: application restart may be necessary)</string>
<string name="summary_acceleration"></string>
<string name="summary_springness">Inverse of preserving momentum.</string>
<string name="summary_maxspeed"></string>
<string name="summary_threshold">Do not detect any movement under this.</string>
<string name="preferences_set_error">Service connection error.</string>
<string name="menu_settings">Settings</string>
<string name="image_loader">Load Image</string>
<string name="reset_image">Reset Image</string>
<string name="saved_orientation">Locked orientation</string>
<string name="automatic_orientation">Automatic orientation</string>
<string name="title_use_orientation">Use orientation</string>
<string name="summary_use_orientation">Instead of manually computing angles.</string>
</resources>
